po: update po/sk_SK/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sk_SK/menu.po
+++ b/po/sk_SK/menu.po
@@ -7,13 +7,14 @@
 # Limexis <elfino@azet.sk>, 2013
 # Petra Ďurišová <durisova@zivica.sk>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Radek Hrančík <radek.hrancik@gmail.com>, 2017
 # sat01 <sat01@seznam.cz>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-06 02:28+0000\n"
+"Last-Translator: Radek Hrančík <radek.hrancik@gmail.com>\n"
 "Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -345,7 +346,7 @@ msgstr "PDF Faktúra"
 
 msgctxt "menu"
 msgid "Email Invoice"
-msgstr ""
+msgstr "E-mailová faktúra"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -500,7 +501,7 @@ msgstr "Vyhladať preferencie"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Date Preferences"
-msgstr ""
+msgstr "Preferencie dátumu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -752,7 +753,7 @@ msgstr "Nová hromadná SMS"
 
 msgctxt "menu"
 msgid "Badge Layout"
-msgstr ""
+msgstr "Grafika menovky"
 
 msgctxt "menu"
 msgid "CiviCRM"
@@ -1008,7 +1009,7 @@ msgstr "Editor profilov"
 
 msgctxt "menu"
 msgid "Confirm dates"
-msgstr ""
+msgstr "Potvrdiť dátumy"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1073,7 +1074,7 @@ msgstr "Šablóny zoznamov účastníkov"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Event Name Badge Layouts"
-msgstr ""
+msgstr "Grafiky menoviek na podujatie"
 
 msgctxt "menu"
 msgid "Conference Slot Labels"
@@ -1086,7 +1087,7 @@ msgstr "Vyhľadať účastníkov"
 
 msgctxt "menu"
 msgid "Print Event Name Badge"
-msgstr "Vytlačiť vysačky pre podujatie"
+msgstr "Vytlačiť menovky na podujatie"
 
 msgctxt "menu"
 msgid "Event Info and Settings"
@@ -1106,7 +1107,7 @@ msgstr "Online registrácia na podujatie"
 
 msgctxt "menu"
 msgid "Repeat Event"
-msgstr ""
+msgstr "Opakovať udalosť"
 
 msgctxt "menu"
 msgid "Conference Slots"
@@ -1279,26 +1280,26 @@ msgstr "Importovať členstvo"
 
 msgctxt "menu"
 msgid "CiviPledge Dashboard"
-msgstr "CiviZálohy - palubná doska"
+msgstr "CiviPrísľub - palubná doska"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Find Pledges"
-msgstr "Vyhľadať zálohy"
+msgstr "Vyhľadať prísľuby"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledges"
-msgstr "Zálohy"
+msgstr "Prísľuby"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Pledge"
-msgstr "Nová záloha"
+msgstr "Nový prísľub"
 
 msgctxt "menu"
 msgid "Pledge Payments"
-msgstr "Platby záloh"
+msgstr "Platby prísľubov"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1307,7 +1308,7 @@ msgstr "CiviZostavy"
 
 msgctxt "menu"
 msgid "CiviCRM Reports"
-msgstr "CiviCRM záznamy"
+msgstr "CiviCRM Zostavy"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1330,7 +1331,7 @@ msgstr "Zostava"
 
 msgctxt "menu"
 msgid "Reports Listing"
-msgstr "Zoznam záznamov"
+msgstr "Zoznam zostáv"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1340,7 +1341,7 @@ msgstr "CiviCRM Novinky"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Getting Started"
-msgstr ""
+msgstr "Začíname"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1400,7 +1401,7 @@ msgstr "Zostavy prispevkov"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Reports"
-msgstr "Zostavy Záloh"
+msgstr "Zostavy prísľubov"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1480,12 +1481,12 @@ msgstr "Vyhľadať hromadná SMS"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New A/B Test"
-msgstr ""
+msgstr "Nový A/B test"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Manage A/B Tests"
-msgstr ""
+msgstr "Spravovať A/B testy"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1615,7 +1616,7 @@ msgstr "Systémové nastavenia"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Connections"
-msgstr ""
+msgstr "Spojenia"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1715,7 +1716,7 @@ msgstr "Dokumentácia"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "Spýtať sa"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1735,7 +1736,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Join CiviCRM"
-msgstr ""
+msgstr "Pridajte sa k CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1745,17 +1746,17 @@ msgstr "Vývojár"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "API Explorer"
-msgstr ""
+msgstr "Prehliadač API"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Developer Docs"
-msgstr ""
+msgstr "Dokumentácia pre programátorov"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Reports"
-msgstr "Záznamy"
+msgstr "Zostavy"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1944,24 +1945,24 @@ msgstr "Sumarizuje zvýšenú čiastku  a počet prispievateľov pre každú str
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Summary"
-msgstr "Sumár záloh"
+msgstr "Prehľad prísľubu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "Summary of pledges including amount pledged, pledge status, next payment "
 "date, balance due, total amount paid etc."
-msgstr "Súhrn záloh, vrátane sumy zálohy, stavu, dátumu nasledujúcej platby, doplatku, celkovej sumy zaplatenia atď."
+msgstr "Prehľad prísľubov, vrátane prisľúbenej čiastky, stavu prísľubu, dátumu nasledujúcej platby, zostatku, celkovej vyplatenej čiastky atď."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledged But not Paid"
-msgstr "Záloha ale neuhradená"
+msgstr "Prisľúbené ale neuhradené"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledged but not Paid Report"
-msgstr "Report záloh ale neuhradených položiek"
+msgstr "Prisľúbené ale žiadny výkaz platieb."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2096,7 +2097,7 @@ msgstr "Email odskočenia"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Bounce Report for mailings"
-msgstr "Zostava odskočeni pre E-maily"
+msgstr "Zostava odrieknutí od rozosielania e-mailov"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2154,29 +2155,29 @@ msgstr "Podrobná zostava o agitácii, telefónnom bankovníctve,  alebo iných 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Methods"
-msgstr ""
+msgstr "Platobné metódy"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Close Accounting Period"
-msgstr ""
+msgstr "Uzavrieť účtovné obdobie"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "Konfigurovať CKEditor"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM Resources"
-msgstr ""
+msgstr "CiviCRM zdroje"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
-msgstr ""
+msgstr "Dávkovo zlúčiť zdvojené kontakty"
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
-msgstr ""
+msgstr "Vložiť CiviCRM obsah"
 
 msgctxt "menu"
 msgid "Self-service Registration Update"
@@ -2194,41 +2195,41 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Components"
-msgstr ""
+msgstr "Komponenty"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Extensions"
-msgstr ""
+msgstr "Rozšírenia"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "My Reports"
-msgstr ""
+msgstr "Moje zostavy"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Details"
-msgstr ""
+msgstr "Podrobnosti aktivity"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Summary"
-msgstr ""
+msgstr "Prehľad aktivity"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Shows activity statistics by type / date"
-msgstr ""
+msgstr "Zobrazí štatistiky aktivity podľa typu / dátumu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Detail"
-msgstr ""
+msgstr "Podrobnosti prísľubu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "List of pledges including amount pledged, pledge status, next payment date, "
 "balance due, total amount paid etc."
-msgstr ""
+msgstr "Zoznam prísľubov, vrátane prisľúbenej čiastky, stavu prísľubu, dátumu nasledujúcej platby, zostatku, celkovej vyplatenej čiastky atď."
