--- a/po/sk_SK/admin.po
+++ b/po/sk_SK/admin.po
@@ -4,14 +4,15 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Radek Hrančík <radek.hrancik@gmail.com>, 2017
 # sat01 <sat01@seznam.cz>, 2013
 # Tibor Repček <tiborepcek@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-05 22:54+0000\n"
+"Last-Translator: Radek Hrančík <radek.hrancik@gmail.com>\n"
 "Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1949,7 +1950,7 @@ msgstr ""
 
 #: CRM/Admin/Page/LabelFormats.php
 msgid "Name Badge"
-msgstr ""
+msgstr "Menovka"
 
 #: CRM/Admin/Page/LocationType.php
 msgid "Edit Location Type"
