--- a/po/fr_CA/menu.po
+++ b/po/fr_CA/menu.po
@@ -5,7 +5,7 @@
 # Translators:
 # lavamind <jerome@riseup.net>, 2011
 # lavamind <jerome@riseup.net>, 2011
-# Mathieu B <mathieu@brab.ca>, 2016
+# Mathieu B <mathieu@brab.ca>, 2016-2017
 # Mathieu Lu <mathieu@bidon.ca>, 2012,2015
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-02 19:56+0000\n"
-"Last-Translator: Rick Paré\n"
+"PO-Revision-Date: 2017-02-05 06:24+0000\n"
+"Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -675,7 +675,7 @@ msgstr "Options d'extension des fichiers de sauvegarde"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Option Groups"
-msgstr "Option des Groupes"
+msgstr "Groupes d'options"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
