po: update po/sk_SK/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sk_SK/pledge.po
+++ b/po/sk_SK/pledge.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Radek Hrančík <radek.hrancik@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-06 02:20+0000\n"
+"Last-Translator: Radek Hrančík <radek.hrancik@gmail.com>\n"
 "Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,11 +21,11 @@ msgstr ""
 #: CRM/Pledge/BAO/Pledge.php CRM/Pledge/Form/PledgeView.php
 #: CRM/Pledge/Selector/Search.php
 msgid "Pledged"
-msgstr ""
+msgstr "Prisľúbené"
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Balance Amount"
-msgstr ""
+msgstr "Zostávajúca čiastka"
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Next Payment Date"
@@ -32,24 +33,24 @@ msgstr "Dátum nasledujúcej platby"
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Paid Amount"
-msgstr ""
+msgstr "Vyplatená čiastka"
 
 #: CRM/Pledge/BAO/Pledge.php templates/CRM/Pledge/Page/Payment.tpl
 msgid "Paid Date"
-msgstr ""
+msgstr "Dátum vyplatenia"
 
 #: CRM/Pledge/BAO/Pledge.php CRM/Pledge/BAO/Query.php
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 msgid "Pledge Payment Status"
-msgstr ""
+msgstr "Stav vyplatenia prísľubu"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "%1 - due on %2 (overdue)"
-msgstr ""
+msgstr "%1 - splatné %2 (po splatnosti)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "%1 - due on %2"
-msgstr ""
+msgstr "%1 - splatné %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
@@ -58,27 +59,27 @@ msgstr ""
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "Make Pledge Payment(s):"
-msgstr ""
+msgstr "Uskutočniť výplatu/y prísľubu:"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "I want to make a one-time contribution"
-msgstr ""
+msgstr "Chcem poskytnúť jednorazový príspevok"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "I pledge to contribute this amount every"
-msgstr ""
+msgstr "Sľubujem prispieť touto čiastkou každý/é"
 
 #: CRM/Pledge/BAO/PledgeBlock.php CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Frequency Interval"
-msgstr ""
+msgstr "Interval opakovania prísľubu"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
-msgstr ""
+msgstr "Prísľub je testovací"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Type - %1"
-msgstr ""
+msgstr "Finančný typ - %1"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
@@ -90,19 +91,19 @@ msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
-msgstr ""
+msgstr "Je prísľub testovací?"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Please enter valid Pledge Frequency Interval"
-msgstr ""
+msgstr "Zadajte prosím platný interval opakovania prísľubu"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Frequency"
-msgstr ""
+msgstr "Opakovanie prísľubu"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Contribution Page"
-msgstr ""
+msgstr "Stránka prísľubu prispievania"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Original Installment Amount"
@@ -110,15 +111,15 @@ msgstr ""
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Currency"
-msgstr ""
+msgstr "Mena prísľubu"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Pledge Frequency Unit"
-msgstr ""
+msgstr "Jednotka opakovania prísľubu"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge day"
-msgstr ""
+msgstr "Deň prísľubu"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Number of Installments"
@@ -130,11 +131,11 @@ msgstr ""
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Modified Date"
-msgstr ""
+msgstr "Dátum úpravy prísľubu"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Cancelled Date"
-msgstr ""
+msgstr "Dátum zrušenia prísľubu"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
@@ -175,11 +176,11 @@ msgstr ""
 
 #: CRM/Pledge/Form/Payment.php
 msgid "Edit Scheduled Pledge Payment"
-msgstr ""
+msgstr "Upraviť plánovanú výplatbu prísľubu"
 
 #: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
-msgstr ""
+msgstr "Plánovaná výplata prísľubu bola aktualizovaná."
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -187,7 +188,7 @@ msgstr ""
 #: xml/templates/message_templates/pledge_reminder_html.tpl
 #: xml/templates/message_templates/pledge_reminder_text.tpl
 msgid "Total Pledge Amount"
-msgstr ""
+msgstr "Celková čiastka prísľubu"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "To be paid in"
@@ -231,7 +232,7 @@ msgstr ""
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "Total Pledge Amount should be greater than zero."
-msgstr ""
+msgstr "Celková čiastka prísľubu by mala byť väčšia ako nula."
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "Installments should be greater than zero."
@@ -248,11 +249,11 @@ msgstr ""
 #: CRM/Pledge/Form/Pledge.php
 msgid ""
 "Pledge has been recorded and the payment schedule has been created.<br />"
-msgstr ""
+msgstr "Prísľub bol zaznamenaný a plánovaná výplata bola vytvorená.<br />"
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "Pledge has been updated.<br />"
-msgstr ""
+msgstr "Prísľub bol aktualizovaný.<br />"
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "An acknowledgment email has been sent to %1.<br />"
@@ -263,13 +264,13 @@ msgid ""
 "If a payment is due now, you can record <a href='%1'>a check, EFT, or cash "
 "payment for this pledge</a> OR <a href='%2'>submit a credit card "
 "payment</a>."
-msgstr ""
+msgstr "Ak nastal termín výplaty prísľubu, môžete ju uskutočniť <a href='%1'> šekom, bankovým prevodom, alebo platbou v hotovosti</a> ALEBO <a href='%2'>vykonať platbu kartou</a>."
 
 #: CRM/Pledge/Form/Pledge.php
 msgid ""
 "If a payment is due now, you can record <a href='%1'>a check, EFT, or cash "
 "payment for this pledge</a>."
-msgstr ""
+msgstr "Ak nastal termín výplaty prísľubu, môžete ju uskutočniť <a href='%1'> šekom, bankovým prevodom, alebo platbou v hotovosti</a>."
 
 #: CRM/Pledge/Form/Pledge.php
 #: xml/templates/message_templates/pledge_reminder_html.tpl
@@ -279,34 +280,34 @@ msgstr ""
 
 #: CRM/Pledge/Form/PledgeView.php
 msgid "View Pledge by"
-msgstr ""
+msgstr "Zobraziť prísľub podľa"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Pledger Name or Email"
-msgstr ""
+msgstr "Meno a e-mail poskytovateľa prísľubu"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Pledger Name"
-msgstr ""
+msgstr "Meno poskytovateľa prísľubu"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
-msgstr "Vyhľadať zálohy"
+msgstr "Vyhľadať prísľuby"
 
 #: CRM/Pledge/Form/Task/Delete.php CRM/Pledge/Task.php
 msgid "Delete Pledges"
-msgstr "Zmazať zálohy"
+msgstr "Zmazať prísľuby"
 
 #: CRM/Pledge/Form/Task/Delete.php
 msgid "%count pledge deleted."
 msgid_plural "%count pledges deleted."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%count prísľub zmazaný."
+msgstr[1] "%count prísľuby zmazané."
+msgstr[2] "%count prísľubov zmazaných."
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
-msgstr ""
+msgstr "Vytlačiť zoznam prísľubov"
 
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
@@ -318,15 +319,15 @@ msgstr ""
 
 #: CRM/Pledge/Info.php
 msgid "View pledges"
-msgstr ""
+msgstr "Zobraziť prísľuby"
 
 #: CRM/Pledge/Info.php
 msgid "edit pledges"
-msgstr ""
+msgstr "upraviť prísľuby"
 
 #: CRM/Pledge/Info.php
 msgid "Create and update pledges"
-msgstr ""
+msgstr "Vytvoriť a aktualizovať prísľuby"
 
 #: CRM/Pledge/Info.php
 msgid "delete in CiviPledge"
@@ -334,23 +335,23 @@ msgstr ""
 
 #: CRM/Pledge/Info.php
 msgid "Delete pledges"
-msgstr ""
+msgstr "Zmazať prísľuby"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
-msgstr ""
+msgstr "Vaše príspevky"
 
 #: CRM/Pledge/Page/Tab.php
 msgid ""
 "Pledge has been Cancelled and all scheduled (not completed) payments have "
 "been cancelled.<br />"
-msgstr ""
+msgstr "Prísľub bol zrušený a všetky plánované (nedokončené) platby boli zrušené tiež.<br />"
 
 #: CRM/Pledge/Selector/Search.php
 msgid ""
 "Cancelling this pledge will also cancel any scheduled (and not completed) "
 "pledge payments."
-msgstr ""
+msgstr "Zrušením tohoto prísľubu budú tiež zrušené všetky plánované (a neuskutočnené) platby tohoto prísľubu."
 
 #: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
@@ -362,15 +363,15 @@ msgstr "Upraviť zálohu"
 
 #: CRM/Pledge/Selector/Search.php
 msgid "Cancel Pledge"
-msgstr ""
+msgstr "Zrušiť prísľub"
 
 #: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
-msgstr ""
+msgstr "Zmazať prísľub"
 
 #: CRM/Pledge/Selector/Search.php
 msgid "Pledged For"
-msgstr ""
+msgstr "Prisľúbené pre"
 
 #: CRM/Pledge/Selector/Search.php
 msgid "Next Pay Date"
@@ -382,11 +383,11 @@ msgstr ""
 
 #: CRM/Pledge/Selector/Search.php
 msgid "Pledge Search"
-msgstr ""
+msgstr "Vyhľadávanie prísľubov"
 
 #: CRM/Pledge/Task.php
 msgid "Export Pledges"
-msgstr ""
+msgstr "Exportovať prísľuby"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
 msgid "Adjust scheduled amount"
@@ -554,7 +555,7 @@ msgstr ""
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "Pledge Summary"
-msgstr ""
+msgstr "Prehľad prísľubu"
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "(current month)"
@@ -566,7 +567,7 @@ msgstr ""
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "Total Pledges"
-msgstr ""
+msgstr "Celkom prísľubov"
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "Payments Received"
@@ -578,7 +579,7 @@ msgstr ""
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "Recent Pledges"
-msgstr ""
+msgstr "Nedávne prísľuby"
 
 #: templates/CRM/Pledge/Page/Payment.hlp
 msgid ""
@@ -671,7 +672,7 @@ msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Pledger"
-msgstr ""
+msgstr "Poskytovateľ prísľubu"
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Create date"
@@ -696,14 +697,14 @@ msgstr ""
 #: xml/templates/message_templates/pledge_reminder_html.tpl
 #: xml/templates/message_templates/pledge_reminder_text.tpl
 msgid "Pledge Information"
-msgstr ""
+msgstr "Informácia o prísľube"
 
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
 #: xml/templates/message_templates/pledge_acknowledge_text.tpl
 #: xml/templates/message_templates/pledge_reminder_html.tpl
 #: xml/templates/message_templates/pledge_reminder_text.tpl
 msgid "Pledge Received"
-msgstr ""
+msgstr "Obdržaný prísľub"
 
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
 #: xml/templates/message_templates/pledge_acknowledge_text.tpl
@@ -746,7 +747,7 @@ msgstr ""
 
 #: xml/templates/message_templates/pledge_acknowledge_subject.tpl
 msgid "Thank you for your Pledge"
-msgstr ""
+msgstr "Vďaka za Váš prísľub"
 
 #: xml/templates/message_templates/pledge_acknowledge_text.tpl
 msgid ""
@@ -819,7 +820,7 @@ msgstr ""
 
 #: CRM/Pledge/Task.php
 msgid "Export pledges"
-msgstr ""
+msgstr "Exportovať prísľuby"
 
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Beginning Date"
