--- a/po/sk_SK/queue.po
+++ b/po/sk_SK/queue.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Jozef Gaal <preklady@mayday.sk>, 2012
+# Radek Hrančík <radek.hrancik@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2017-02-06 02:36+0000\n"
+"Last-Translator: Radek Hrančík <radek.hrancik@gmail.com>\n"
 "Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +20,7 @@ msgstr ""
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue Name"
-msgstr ""
+msgstr "Názov fronty"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Submit Time"
@@ -27,11 +28,11 @@ msgstr "Čas odoslania"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Release Time"
-msgstr ""
+msgstr "Čas uvoľnenia"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue item datas"
-msgstr ""
+msgstr "Údaje položiek vo fronte"
 
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
@@ -39,4 +40,4 @@ msgstr ""
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue ID"
-msgstr ""
+msgstr "ID fronty"
