po: update po/sk_SK/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sk_SK/report.po
+++ b/po/sk_SK/report.po
@@ -5,13 +5,14 @@
 # Translators:
 # Petra Ďurišová <durisova@zivica.sk>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Radek Hrančík <radek.hrancik@gmail.com>, 2017
 # sat01 <sat01@seznam.cz>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-06 02:32+0000\n"
+"Last-Translator: Radek Hrančík <radek.hrancik@gmail.com>\n"
 "Language-Team: Slovak (http://www.transifex.com/civicrm/civicrm/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1359,11 +1360,11 @@ msgstr "Riadok (y) sú uvedené"
 
 #: CRM/Report/Form/Pledge/Detail.php CRM/Report/Form/Pledge/Summary.php
 msgid "Pledge Made Date"
-msgstr "Dátum platby zálohy"
+msgstr "Dátum poskytnutia prísľubu"
 
 #: CRM/Report/Form/Pledge/Detail.php CRM/Report/Form/Pledge/Summary.php
 msgid "Pledged Amount"
-msgstr "Výška zálohy"
+msgstr "Výška prísľubu"
 
 #: CRM/Report/Form/Pledge/Detail.php CRM/Report/Form/Pledge/Summary.php
 msgid "Total Amount Paid"
@@ -1371,7 +1372,7 @@ msgstr "Celková platba"
 
 #: CRM/Report/Form/Pledge/Detail.php
 msgid "Total No Pledges"
-msgstr "Ceľkový počet záloh"
+msgstr "Ceľkový počet prísľubov"
 
 #: CRM/Report/Form/Pledge/Pbnp.php
 msgid "Constituent Name"
@@ -1383,7 +1384,7 @@ msgstr "Ďalší termín splatnosti"
 
 #: CRM/Report/Form/Pledge/Pbnp.php
 msgid "View Pledge Details for this contact"
-msgstr "Zobraziť podrobnosti záloh pre tento kontakt."
+msgstr "Zobraziť podrobnosti prísľubov pre tento kontakt"
 
 #: CRM/Report/Form/Pledge/Summary.php
 msgid "email"
@@ -1391,7 +1392,7 @@ msgstr "E-mail"
 
 #: CRM/Report/Form/Pledge/Summary.php
 msgid "Aggregate Amount Pledged"
-msgstr "Agregované množstvo záloh"
+msgstr "Zoskupiť prisľúbené čiastky"
 
 #: CRM/Report/Form/Register.php
 msgid "Url already exists in Database."
