po: update po/sr_RS@latin/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-01 16:09+0000\n"
+"PO-Revision-Date: 2017-02-06 12:49+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -4366,7 +4366,7 @@ msgstr "Sledeći formati su prihvaćeni:"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Simple values such as numbers, true, false and null."
-msgstr ""
+msgstr "Osnovne vrednosti kao što su brojevi, tačno, netačno i nepostojeće."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
@@ -4865,7 +4865,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Accept and track pledges (for recurring gifts)."
-msgstr ""
+msgstr "Prihvati i prati obaveze (za periodične donacije)."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Online event registration and participant tracking."
