po: update po/sr_RS@latin/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/batch.po
+++ b/po/sr_RS@latin/batch.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-31 13:49+0000\n"
+"PO-Revision-Date: 2017-02-06 11:42+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -127,7 +127,7 @@ msgstr "Unos podataka u seriju za članstva"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Batch Data Entry for Pledge Payments"
-msgstr ""
+msgstr "Unos podataka u grupu za uplate obaveza"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
@@ -147,7 +147,7 @@ msgstr "Tip članstva je obavezno polje."
 
 #: CRM/Batch/Form/Entry.php
 msgid "You can not record two payments for the same pledge in a single batch."
-msgstr ""
+msgstr "Ne možete snimiti dve uplate za istu obavezu u jednoj grupi."
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -198,7 +198,7 @@ msgstr "Unešen ukupan iznos"
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid "Open Pledges (Due Date - Amount)"
-msgstr ""
+msgstr "Otvorene obaveze (Krajnji rok - Iznos)"
 
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
