--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-03 15:50+0000\n"
+"PO-Revision-Date: 2017-02-06 12:50+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1910,7 +1910,7 @@ msgstr "Zabeleži aktivnost"
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Add Pledge"
-msgstr ""
+msgstr "Dodaj obavezu"
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Add Membership"
@@ -2327,7 +2327,7 @@ msgstr "Odnosi-veze"
 #: CRM/Contact/BAO/Query.php CRM/Core/SelectValues.php CRM/Dedupe/Merger.php
 #: xml/templates/civicrm_data.tpl
 msgid "Pledges"
-msgstr ""
+msgstr "Obaveze"
 
 #: CRM/Contact/BAO/Query.php CRM/Contact/Form/Search/Custom/FullText/Case.php
 #: CRM/Contact/Form/Search.php CRM/Dedupe/Merger.php
@@ -6051,7 +6051,7 @@ msgstr "Donacija"
 
 #: CRM/Core/BAO/Mapping.php
 msgid "Pledge"
-msgstr ""
+msgstr "Obaveza"
 
 #: CRM/Core/BAO/Mapping.php CRM/UF/Page/ProfileEditor.php
 msgid "Case"
@@ -10000,11 +10000,11 @@ msgstr "nije prazno"
 
 #: CRM/Core/SelectValues.php
 msgid "Is Null"
-msgstr ""
+msgstr "je nepostojeći"
 
 #: CRM/Core/SelectValues.php
 msgid "Not Null"
-msgstr ""
+msgstr "nije nepostojeći"
 
 #: CRM/Core/SelectValues.php
 msgid "Exact Match"
@@ -10769,7 +10769,7 @@ msgstr "Pretraga CiviCRM učesnika"
 
 #: CRM/Export/BAO/Export.php
 msgid "CiviCRM Pledge Search"
-msgstr ""
+msgstr "Pretraga CiviCRM obaveza"
 
 #: CRM/Export/BAO/Export.php
 msgid "CiviCRM Case Search"
@@ -15317,7 +15317,7 @@ msgid ""
 "In the process of setting up CiviCRM components or configuring pages and "
 "profiles, you might have created test contributions, activities, "
 "participants, pledges, etc."
-msgstr ""
+msgstr "U procesu podešavanja CiviCRM komponenti ili konfiguraciji profila i stranica ste možda napravili test donacije, aktivnosti, učesnike, obaveze, itd."
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
@@ -21074,19 +21074,19 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pledge Acknowledgment"
-msgstr ""
+msgstr "Potvrda obaveze"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Send Pledge Acknowledgment."
-msgstr ""
+msgstr "Pošalji potvrdu obaveze"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pledge Reminder"
-msgstr ""
+msgstr "Podsetnik obaveze"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Send Pledge Reminder."
-msgstr ""
+msgstr "Pošalji podsetnik obaveze."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Inbound Email"
@@ -21759,11 +21759,11 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pledge Report"
-msgstr ""
+msgstr "Izveštaj obaveze"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pledged but not Paid Report"
-msgstr ""
+msgstr "Izveštaj o obavezanoj ali neplaćenoj sumi"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Relationship Report"
@@ -21948,13 +21948,13 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pledge Summary Report"
-msgstr ""
+msgstr "Izveštaj - kratak pregled obaveze"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
 "Summary of pledges including amount pledged, pledge status, next payment "
 "date, balance due, total amount paid etc."
-msgstr ""
+msgstr "Kratak pregled obaveza uključujući iznos obaveze, status obaveze, datum sledeće uplate, iznos sledeće uplate, iznos ukupne uplate itd."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Contribution Aggregate by Relationship"
@@ -22077,7 +22077,7 @@ msgstr "Eksport učesnika"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Export Pledge"
-msgstr ""
+msgstr "Eksport obaveze"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Export Case"
@@ -22501,7 +22501,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pledge Payment"
-msgstr ""
+msgstr "Uplata obaveze"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Open"
@@ -23017,11 +23017,11 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Process Pledges"
-msgstr ""
+msgstr "Obradi obaveze"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Updates pledge records and sends out reminders"
-msgstr ""
+msgstr "Ažurira zapise o obavezama i šalje podsetnike"
 
 #: xml/templates/civicrm_data.tpl
 msgid "send_reminders=[1 or 0] optional- 1 to send payment reminders"
@@ -23358,11 +23358,11 @@ msgstr ""
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Pledges - Acknowledgement"
-msgstr ""
+msgstr "Obaveze - Potvrda"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Pledges - Payment Reminder"
-msgstr ""
+msgstr "Obaveze - Podsetnik za plaćanje"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Profiles - Admin Notification"
@@ -26676,13 +26676,13 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pledge Detail Report"
-msgstr ""
+msgstr "Detaljni izveštaj obaveze"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
 "List of pledges including amount pledged, pledge status, next payment date, "
 "balance due, total amount paid etc."
-msgstr ""
+msgstr "Lista obaveza uključujući iznos obaveze, status obaveze, datum sledeće uplate, iznos sledeće uplate, iznos ukupne uplate itd."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Activity Summary Report"
@@ -26696,7 +26696,7 @@ msgstr ""
 msgid ""
 "Groups and totals pledges by criteria including contact, time period, pledge"
 " status, location, etc."
-msgstr ""
+msgstr "Grupe i ukupne vrednosti obaveza po kriterijumima koji uključuju kontakte, vremenski period, status obaveze, lokaciju donatora, itd."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Recurring Contributions Summary"
