--- a/po/sr_RS@latin/report.po
+++ b/po/sr_RS@latin/report.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-31 15:54+0000\n"
+"PO-Revision-Date: 2017-02-06 11:04+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1357,11 +1357,11 @@ msgstr "Red(ova) izlistano"
 
 #: CRM/Report/Form/Pledge/Detail.php CRM/Report/Form/Pledge/Summary.php
 msgid "Pledge Made Date"
-msgstr ""
+msgstr "Obaveza datuma"
 
 #: CRM/Report/Form/Pledge/Detail.php CRM/Report/Form/Pledge/Summary.php
 msgid "Pledged Amount"
-msgstr ""
+msgstr "Iznos obaveze"
 
 #: CRM/Report/Form/Pledge/Detail.php CRM/Report/Form/Pledge/Summary.php
 msgid "Total Amount Paid"
@@ -1381,7 +1381,7 @@ msgstr ""
 
 #: CRM/Report/Form/Pledge/Pbnp.php
 msgid "View Pledge Details for this contact"
-msgstr ""
+msgstr "Vidite detalje o obavezi ovog kontakta"
 
 #: CRM/Report/Form/Pledge/Summary.php
 msgid "email"
