po: update po/sr_RS@latin/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/menu.po
+++ b/po/sr_RS@latin/menu.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-31 15:54+0000\n"
+"PO-Revision-Date: 2017-02-06 12:10+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1282,21 +1282,21 @@ msgstr "CiviPledge kontrolna tabla"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Find Pledges"
-msgstr ""
+msgstr "Nađi obaveze"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledges"
-msgstr ""
+msgstr "Obaveze"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Pledge"
-msgstr ""
+msgstr "Nova obaveza"
 
 msgctxt "menu"
 msgid "Pledge Payments"
-msgstr ""
+msgstr "Uplate obaveze"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1398,7 +1398,7 @@ msgstr "Izveštaji o donacijama"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Reports"
-msgstr ""
+msgstr "Izveštaji obaveza"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1942,24 +1942,24 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Summary"
-msgstr ""
+msgstr "Kratak pregled obaveze"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "Summary of pledges including amount pledged, pledge status, next payment "
 "date, balance due, total amount paid etc."
-msgstr ""
+msgstr "Kratak pregled obaveza uključujući iznos obaveze, status obaveze, datum sledeće uplate, iznos sledeće uplate, iznos ukupne uplate itd."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledged But not Paid"
-msgstr ""
+msgstr "Obavezano ali nije plaćeno"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledged but not Paid Report"
-msgstr ""
+msgstr "Izveštaj - Obavezano ali nije plaćeno"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2222,11 +2222,11 @@ msgstr "Prikazuje statistike aktivnosti po tipu / datumu"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Pledge Detail"
-msgstr ""
+msgstr "Detalji o obavezi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "List of pledges including amount pledged, pledge status, next payment date, "
 "balance due, total amount paid etc."
-msgstr ""
+msgstr "Lista obaveza uključujući iznos obaveze, status obaveze, datum sledeće uplate, iznos sledeće uplate, iznos ukupne uplate itd."
