po: update po/sr_RS@latin/grant.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/grant.po
+++ b/po/sr_RS@latin/grant.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-24 11:50+0000\n"
+"PO-Revision-Date: 2017-02-06 12:50+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -23,19 +23,19 @@ msgstr "Grant beleške"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Money Transfer Date is NULL"
-msgstr ""
+msgstr "Datum transfera novca granta je nepostojeći"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Application Received Date is NULL"
-msgstr ""
+msgstr "Datum prijema aplikacije za grant je nepostojeći"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Due Date is NULL"
-msgstr ""
+msgstr "Krajnji rok granta je nepostojeći"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
-msgstr ""
+msgstr "Datum odlučivanja o grantu je nepostojeći"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
