po: update po/sr_RS@latin/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/member.po
+++ b/po/sr_RS@latin/member.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-03 15:50+0000\n"
-"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-02-06 16:10+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -192,27 +192,27 @@ msgstr "Članstvo periodične donacije"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Block ID"
-msgstr ""
+msgstr "ID bloka članstva"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Block Entity Table"
-msgstr ""
+msgstr "Tabela entiteta bloka članstva"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Block Entity ID"
-msgstr ""
+msgstr "ID entiteta bloka članstva"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Block Membership Types"
-msgstr ""
+msgstr "Tipovi članstva bloka članstva"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Block Default Type"
-msgstr ""
+msgstr "Podrazumevani tip bloka članstva"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Block Display Minimum Fee"
-msgstr ""
+msgstr "Prikaz minimalne kotizacije bloka članstva"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Block Is Separate Payment"
@@ -220,19 +220,19 @@ msgstr ""
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Block New Title"
-msgstr ""
+msgstr "Novi naslov bloka članstva"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Block New Text"
-msgstr ""
+msgstr "Novi tekst bloka članstva"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Block Renewal Title"
-msgstr ""
+msgstr "Naslov obnove bloka članstva"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Block Renewal Text"
-msgstr ""
+msgstr "Tekst obnove bloka članstva"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Is Required"
@@ -362,7 +362,7 @@ msgstr "Ovo članstvo je povezano sa donacijom. Morate imati dozulu za 'brisanje
 msgid ""
 "There are no configured membership statuses. You cannot add this membership "
 "until your membership statuses are correctly configured"
-msgstr ""
+msgstr "Nema podešenih statusa članstva. Ne možete dodati ovo članstvo dok vaši statusi članstva nisu ispravno podešeni."
 
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
 msgid "Membership renewed automatically"
@@ -1285,15 +1285,15 @@ msgstr ""
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "No contacts are currently eligible to inherit this relationship."
-msgstr ""
+msgstr "Nema kontakata koji su kvalifikovani da preuzmu ovu vezu."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "One contact is currently eligible to inherit this relationship."
-msgstr ""
+msgstr "Jedan kontakt je kvalifikovan da preuzme ovu vezu."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "%1 contacts are currently eligible to inherit this relationship."
-msgstr ""
+msgstr "%1 kontakata je kvalifikovano da preuzme ovu vezu."
 
 #: templates/CRM/Member/Form/MembershipBlock.hlp
 msgid "Separate Payment"
@@ -1336,7 +1336,7 @@ msgstr ""
 
 #: templates/CRM/Member/Form/MembershipBlock.hlp
 msgid "Display Fee"
-msgstr ""
+msgstr "Prikaži kotizaciju"
 
 #: templates/CRM/Member/Form/MembershipBlock.hlp
 msgid ""
@@ -1377,23 +1377,23 @@ msgstr ""
 
 #: templates/CRM/Member/Form/MembershipBlock.tpl
 msgid "Include a Membership Signup section in this Online Contribution page?"
-msgstr ""
+msgstr "Uključite sekciju za prijavu u članstvo za ovu stranicu lične kampanje?"
 
 #: templates/CRM/Member/Form/MembershipBlock.tpl
 msgid "Membership section title - for new member signups."
-msgstr ""
+msgstr "Naslov sekcije za članstvo - za prijem novih članova."
 
 #: templates/CRM/Member/Form/MembershipBlock.tpl
 msgid "Membership section introductory text - for new member signups."
-msgstr ""
+msgstr "Uvodni tekst sekcije za članstvo - za prijem novih članova."
 
 #: templates/CRM/Member/Form/MembershipBlock.tpl
 msgid "Membership section title - displayed to renewing members."
-msgstr ""
+msgstr "Naslov sekcije za članstvo - za obnavljanje postojećih članstava."
 
 #: templates/CRM/Member/Form/MembershipBlock.tpl
 msgid "Membership section introductory text - displayed to renewing members."
-msgstr ""
+msgstr "Uvodni tekst sekcije za članstvo - za obnavljanje postojećih članstava."
 
 #: templates/CRM/Member/Form/MembershipBlock.tpl
 msgid ""
@@ -1409,7 +1409,7 @@ msgid ""
 "Click <a id='memQuickconfig' href='#'>here</a> if you want to configure the "
 "Membership Types below as part of a Price Set, with the added flexibility "
 "and complexity that entails."
-msgstr ""
+msgstr "Kliknite <a id='memQuickconfig' href='#'>ovde</a> ukoliko želite da podesite tipove članstva ispod kao delove seta cena, koji mogu biti fleksibilniji i kompleksniji."
 
 #: templates/CRM/Member/Form/MembershipBlock.tpl
 msgid "Include these membership types"
@@ -1423,7 +1423,7 @@ msgstr "(Nije dostupno)"
 msgid ""
 "If checked, user must signup for one of the displayed membership options "
 "before continuing."
-msgstr ""
+msgstr "Ukoliko je ova opcija štiklirana, korisnik se mora prijaviti za jednu od prikazanih opcija članstva pre nego što nastavi"
 
 #: templates/CRM/Member/Form/MembershipBlock.tpl
 msgid ""
@@ -1443,7 +1443,7 @@ msgid ""
 "You need to have at least one <a href=\"%1\">Membership Type</a> with "
 "'Public' visibility in order to enable self-service Membership Signup and "
 "Renewal."
-msgstr ""
+msgstr "Morate imati barem jedan <a href=\"%1\">tip članstva</a> kome je vidljivost podešena na 'javno' kako biste mogli da aktivirate samostalno prijavljivanje i obnovu članstva."
 
 #: templates/CRM/Member/Form/MembershipRelated.tpl
 msgid "Related Contacts/Memberships"
@@ -1464,14 +1464,14 @@ msgid ""
 "you want a receipt to be sent when this Membership is recorded, click Cancel"
 " and then click Edit from the Summary tab to add an email address before "
 "Renewal the Membership."
-msgstr ""
+msgstr "Nećete biti u mogućnosti da pošaljete automatsku email priznanicu za ovo Članstvo pošto ne postoji email adresa za ovaj kontakt. Ukoliko želite da pošaljete priznanicu kada se ovo Članstvo zabeleži, kliknite na Otkaži, zatim Uredi u Kratkom pregledu da biste dodali email adresu pre beleženja Članstva."
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid ""
 "Use this form to Renew Membership Record on behalf of %1.\n"
 "        <strong>A %2 transaction will be submitted</strong>\n"
 "        using the selected payment processor."
-msgstr ""
+msgstr "Upotrebite ovaj formular kako biste poslali Zapis o članstvu u ime %1.\n<strong> Transakcija %2 će biti poslata</strong> \npomoću odabranog procesora uplate."
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid ""
@@ -1492,11 +1492,11 @@ msgstr "status ovog članstva."
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "Renewal Payment and Receipt"
-msgstr ""
+msgstr "Uplata i priznanica za obnovu"
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "Renewal extends membership end date by one membership period"
-msgstr ""
+msgstr "Obnova će pomeriti datum kraja članstva za jedan period članstva"
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "change"
@@ -1510,7 +1510,7 @@ msgstr "periodi članstva"
 msgid ""
 "Extend the membership end date by this many membership periods. Make sure "
 "the appropriate corresponding fee is entered below."
-msgstr ""
+msgstr "Pomeri datum kraja članstva za ovoliko perioda članstva. Unesite odgovarajući iznos ispod."
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "Automatically email a membership confirmation and receipt to %1?"
@@ -1536,7 +1536,7 @@ msgstr "UPOZORENJE: Brisanjem ove opcije se brišu i svi zapisi članstva za ova
 msgid ""
 "Display name for this Membership status (e.g. New, Current, Grace, "
 "Expired...)."
-msgstr ""
+msgstr "Prikaži ime za status ovog članstva (npr. Novo, trenutno, isteklo...)."
 
 #: templates/CRM/Member/Form/MembershipStatus.tpl
 msgid ""
